# Hunter

./: .gitignore  .pre-commit-config.yaml  DISCLAIMER.md  PLAN-v4.md  README.md  SKILL.md  SPEC-v4.md  SPEC-v5-model-agnostic.md  TOOLS.md  config.yaml  hunter_tools_mcp.py  integration-contract.json  mcp_server.py  pyproject.toml
benchmarks/: event_kernel_replay.py
chains/: card_shop_attack.yml  file_upload_to_shell.yml  jwt_to_account_takeover.yml  login_to_admin.yml  sqli_to_data_dump.yml  ssrf_to_internal_access.yml
core/: __init__.py  adaptive_engine.py  agents.py  audit.py  auto_access_control.py  auto_cmd.py  auto_cors.py  auto_csrf.py  auto_graphql.py  auto_idor.py  auto_jwt.py  auto_race.py  auto_sqli.py  auto_ssrf.py  auto_ssti.py  auto_websocket.py  auto_xss.py  auto_xxe.py  burp_adapter.py  burp_bridge.py  burp_import.py  chains.py  doctor.py  draft_generator.py  git_manager.py  hunter_core.py  hunter_tools_facade.py  inject.py  jwt_tool.py  knowledge.py  mcp_server.py  parallel_executor.py  phases.py  poc_verifier.py  poc_workflow.py  probe.py  process_runner.py  recon_cache.py  report_filter.py  report_templates.py  (+12 more)
docs/: adaptive-engine-v1.md  adaptive-http.md  architecture.md  attack-session.md  automated-workflow.md  burp-automation-config.md  burp-mcp-mapping.md  burp-mcp-workflow.md  burp-optimal-config.md  capability-matrix.md  common-errors.md  faq.md  hunter-tools-v81-design.md  hunter-tools-v81-plan.md  hunter-v8-3-optimization.md  hunter-v8-changelog.md  integration-v2.md  lab-knowledge-base.md  lab-lessons.md  lab-progress-final.md  (+12 more)
(+276 files in other folders)
